EEC_InitBackup/src/objects/Training_Experience__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Training Experience</relationshipLabel>
        <relationshipName>Training_Experience</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_the_Training__c</fullName>
        <label>Date of the Training</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensing_Transactions__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Licensing Transactions</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Training Experience</relationshipLabel>
        <relationshipName>Training_Experience</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Training_Hours__c</fullName>
        <label>Number of Training Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>75</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Training Experience</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Experience</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>